                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 15-03-2005 fixed: memory leak in rgbrenderer.
  - 15-03-2005 fixed: switching from PM3 to another skin, the settings window is misplaced
  - 15-03-2005 changed: list, listex and thumbcontrol can not be focused anymore if they have no items
  - 15-03-2005 fixed: actions where sent to focused controls if they are invisible
  - 15-03-2005 fixed: video/music playlist, no control is focused when all items from a playlist are removed
  - 15-03-2005 changed: Controls free their resources when they are not visible -> more freemem in most screens
  - 15-03-2005 fixed: mem leak in DAAPDirectory
  - 15-03-2005 updated: Finnish language file (Thnx to jutski)
  - 15-03-2004 updated: Polish language file (Thnx to napek)
  - 15-03-2005 updated: Norwegian language file (Thnx to vnm)
  - 15-03-2005 updated: Chinese (Traditional) language file (Thnx to jonsonchen)
  - 15-03-2004 updated: Dutch language file (Thnx to tijmengozer)
  - 15-03-2005 updated: Italian language file (Thnx to kotix)
  - 15-03-2005 updated: German (Austrian) language file (Thnx to CEOMR)
  - 14-03-2005 fixed: filelist is updated correctly after removing items from playlists
  - 13-03-2005 fixed: crash in my videos
  - 13-03-2005 added: Cache dialog shows progressbar when caching.
  - 13-03-2005 changed: Radiobutton renders not selected when disabled.
  - 13-03-2005 changed: Removed clear of z-buffer in videorenders.
  - 13-03-2005 changed: Replaced all VECFILEITEMS with CFileItemList
  - 13-03-2005 added: VideoPlayer.Genre, VideoPlayer.Year, VideoPlayer.Directory for infolabels/infofadelabels.
  - 13-03-2005 fixed: weather broken since last update